@@ -1,4 +1,4 @@
-AUX gentoo-editor-20091005.sh 262 RMD160 88c5131009f919ffd98f0dfc39d63b92d3efaaf0 SHA1 d35fd90e1761a02839222f24943ed8f90fe59d76 SHA256 5251d2a0919a49a75b6c9f1d9de5835ab205e7db98959f57475b4a3e8dc76d43
-EBUILD gentoo-editor-20091005.ebuild 351 RMD160 0994ef848b3245918a5b4ba35c7c43d72a8643e4 SHA1 0fa3870fadf45384ed09e2170e561b3eea7f57c0 SHA256 16d5b699418f1e9fe29e27d86c3f6dfaa7ffe56e2c4dbc1a7059a0697300b35b
-MISC ChangeLog 571 RMD160 a2345057012a5a03fe21d0bfd35434ea8e68c8de SHA1 f8265f2df3a2d11c510644ed7114df130c81c2ab SHA256 0c23b6ab13c1b0b3e4c6aa5297fcb7f43c252d726fad1541a30783e510671aa6
+AUX gentoo-editor-20091015.sh 485 RMD160 e907cedffe3d6592846f420c37af6fcad33cfc11 SHA1 8d512ab0d02b9acd07ae3b200814c3577ce2ac9e SHA256 60f664bcca23e2e5da7662078ed12aaab0ef29f8e718d03c76a8837545d420e3
+EBUILD gentoo-editor-20091015.ebuild 351 RMD160 0994ef848b3245918a5b4ba35c7c43d72a8643e4 SHA1 0fa3870fadf45384ed09e2170e561b3eea7f57c0 SHA256 16d5b699418f1e9fe29e27d86c3f6dfaa7ffe56e2c4dbc1a7059a0697300b35b
+MISC ChangeLog 856 RMD160 97051efb27e10993c027022c852e74344989b229 SHA1 bad7a3bdae2e5a6e92bf64a123d073a2c60b76db SHA256 8e86d8f3522c797eadf506aa5e6d37e29b5fa9e49be3c0aefa5dfe3cebfa865b
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
