@@ -1,0 +1,24 @@
+#!/bin/sh
+
+if [ $# -ne 1 ]; then
+    echo "$0: Exactly one argument required" >&2
+    exit 1
+fi
+
+file=$1
+if [ "${file#-}" != "${file}" ]; then
+    # Argument is supposed to be a file name, not an option
+    file=./${file}
+fi
+
+if [ -z "${EDITOR}" ]; then
+    # Try to get EDITOR from system profile
+    EDITOR=$(source /etc/profile &>/dev/null; echo "${EDITOR}")
+fi
+
+if [ -z "${EDITOR}" ]; then
+    echo "$0: The EDITOR variable must be set" >&2
+    exit 1
+fi
+
+exec ${EDITOR} "${file}"
